--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-/app/__pycache__/
-/__pycache__
-*.pyc
-*.log
-install.log
-/uploads/
-/logs/
-venv
-.env
-/logs/install.log
-.idea/
+/.idea
+/.venv
+/requirements.txt
+/apache
+/sources.list
+cleardocker.sh
