--- a/dockerfiles/Dockerfile.worker
+++ b/dockerfiles/Dockerfile.worker
@@ -1,8 +1,32 @@
-FROM python:3.11-slim
+# dockerfiles/Dockerfile.worker
 
+FROM registry.astralinux.ru/library/astra/ubi17-python37:latest AS base
 WORKDIR /app
-COPY requirements.txt requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+ENV DEBIAN_FRONTEND=noninteractive
+
+#COPY sources.list /etc/apt/sources.list
+
+RUN apt-get update && apt-get install -y \
+    apt-utils \
+    python3-pycryptodome \
+    python3-waitress \
+    python3-celery \
+    python3-flask \
+    python3-venv \
+    python3-dev \
+    python3-redis \
+    python3-flask-sqlalchemy \
+    python3-psycopg2 \
+ && apt-get clean && rm -rf /var/lib/apt/lists/*
+
+FROM base AS builder
+COPY app/whi/pyzipper-0.3.6-py2.py3-none-any.whl /tmp/
+RUN pip3 install --no-index --find-links=/tmp --user /tmp/pyzipper-0.3.6-py2.py3-none-any.whl
+
+FROM base AS final
+COPY --from=builder /root/.local /root/.local
+ENV PATH="/root/.local/bin:${PATH}"
 
 COPY . .
-CMD ["celery", "-A", "app.tasks.celery", "worker", "--loglevel=info"]
+
+CMD ["python3", "-m", "celery", "-A", "app.celery_app", "worker", "--loglevel=info", "--without-gossip", "--without-mingle", "--without-heartbeat"]
